--- a/index.html
+++ b/index.html
@@ -2,9 +2,64 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Техномарт- интеренет-магазин</title>
+<link rel="stylesheet" href="normalize.css" type="text/css">
+<link rel="stylesheet" href="normalize.css" type="text/css">
 </head>
 <body>
-	
+	<header class="main-header">
+		<div class="container">
+			<div class="top-header">
+				<div class="logo"></div>
+				<div class="contacts-header"></div>
+				<div class="user-block"></div>
+			</div>
+			<nav class="main-menu">
+				<ul>
+					<li>Главная</li>
+					<li>Компания</li>
+					<li>Каталог</li>
+					<li>Новости</li>
+					<li>Спецпредлжения</li>
+					<li>Доставка</li>
+					<li>Контакты</li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	<main>
+		<div class="container">
+			<nav class="catalog-menu">
+				<section class="catalog-menu-item">
+					<h2>Материалы</h2>
+					<a href="" class="btn-catalog-menu"></a>
+				</section>
+				<section class="catalog-menu-item">
+					<h2>Материалы</h2>
+					<a href="" class="btn-catalog-menu"></a>
+				</section>
+				<section class="catalog-menu-item">
+					<h2>Материалы</h2>
+					<a href="" class="btn-catalog-menu"></a>
+				</section>
+			</nav>
+			<div class="promo-block">
+				<section class="slide-promo"></section>
+				<section class="promo-info">
+					<section class="promo-info-item">
+						<h2>Скидки 50%</h2>
+						<a href=""></a>
+					</section>
+					<section class="promo-info-item">
+						<h2>Доставка</h2>
+						<a href=""></a>
+					</section>
+				</section>
+			</div>
+			<section class="slide-promo">
+				
+			</section>
+		</div>
+	</main>
 </body>
 </html>
