--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&amp;subset=cyrillic" rel="stylesheet">
 		<link rel="stylesheet" href="normalize.css" type="text/css">
 		<link rel="stylesheet" href="normalize.css" type="text/css">
+		<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+		<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 		<link rel="stylesheet" href="style.css" type="text/css">
 	</head>
 	<body>
@@ -37,7 +39,7 @@
 							<p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 						</div>
 						<div class="user-block">
-							<a href="#" class="user-btn">Войти</a>
+							<a href="#" class="user-btn user-btn-in">Войти</a>
 							<a href="#" class="user-btn">Регистрация</a>
 						</div>
 					</div>
@@ -72,16 +74,31 @@
 					</section>
 				</nav>
 				<div class="promo-block">
-				<section class="slider-promo"></section>
+				<div class="slider-promo">
+					<div class="slide slide-1">
+						<div class="slide-title">
+							<h1>Перфораторы</h1>
+							<p>Настоящие мужские игрушки</p>
+						</div>
+						<img src="img/slides/slide-1.png" alt="" height="268">
+					</div>
+					<div class="slide slide-2">
+						<div class="slide-title">
+							<h1>Дрели</h1>
+							<p>Соседям на радость!</p>
+						</div>
+						<img src="img/slides/slide-2.png" alt="" height="268">
+					</div>
+				</div>
 				<section class="promo-info">
-					<h2 class="visualy-hidden">Информация для клиента</h2>
+					<h2 class="visually-hidden">Информация для клиента</h2>
 					<section class="promo-info-item">
 						<h2>Скидки 50%</h2>
-						<a href="#">На 350 товаров</a>
+						<a class="btn-catalog-menu" href="#">На 350 товаров</a>
 					</section>
 					<section class="promo-info-item">
 						<h2>Доставка</h2>
-						<a href="#">Бесплатно</a>
+						<a class="btn-catalog-menu" href="#">Бесплатно</a>
 					</section>
 				</section>
 			</div>
@@ -188,41 +205,48 @@
 					<b>Сервисы</b>
 					<p>Хороший интернет-магазин отличается от плохого не только ценами!Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
 				</div>
-				<nav class="menu-services">
-					<ul>
-						<li><label for="delivery">Доставка</label><input type="radio" name="delivery" id="delivery" checked=""></li>
-						<li><label for="guarantee">Гарантия</label><input type="radio" name="guarantee" id="guarantee"></li>
-						<li><label for="credit">Кредит</label><input type="radio" name="credit" id="credit"></li>
-					</ul>
-				</nav>
-				<div class="services-description">
-					<section class="service-item">
-						<h3>Доставка</h3>
-						<p>Мы с удовольствием доставим ваш товар прямо
-							к вашему подъезду совершенно бесплатно!
-							Ведь мы неплохо заработаем,
-							поднимая его на ваш этаж!
-						</p>
-					</section>
-					<section class="service-item">
-						<h3>Гарантия</h3>
-						<p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.
-							Дом уж восстановите как-нибудь сами.
-						</p>
-					</section>
-					<section class="service-item">
-						<h3>Кредит</h3>
-						<p>Залезть в долговую яму стало проще!
-							Кредитные консультанты придут вам на помощь.
-						</p>
-						<button type="button" name="order-credit" class="btn">Отправить заявку</button>
-					</section>
+				<div class="service-column">
+					<nav class="menu-services">
+						<form action="">
+						<ul>
+							<li><label for="delivery">Доставка</label></li>
+							<li><label for="guarantee">Гарантия</label></li>
+							<li><label for="credit">Кредит</label></li>
+						</ul>
+						</form>
+					</nav>
+					<input type="radio" name="services" id="delivery" checked="">
+					<input type="radio" name="services" id="guarantee">
+					<input type="radio" name="services" id="credit">
+					<div class="services-description">
+						<section class="service-item service-item-delivery">
+							<h3>Доставка</h3>
+							<p>Мы с удовольствием доставим ваш товар прямо
+								к вашему подъезду совершенно бесплатно!
+								Ведь мы неплохо заработаем,
+								поднимая его на ваш этаж!
+							</p>
+						</section>
+						<section class="service-item service-item-guarantee">
+							<h3>Гарантия</h3>
+							<p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.
+								Дом уж восстановите как-нибудь сами.
+							</p>
+						</section>
+						<section class="service-item service-item-credit">
+							<h3>Кредит</h3>
+							<p>Залезть в долговую яму стало проще!
+								Кредитные консультанты придут вам на помощь.
+							</p>
+							<button type="button" name="order-credit" class="btn">Отправить заявку</button>
+						</section>
+					</div>
 				</div>
 			</div>
 		</section>
-		<article class="datail">
+		<article class="container datail">
 			<section class="datail-discrption">
-				<h2>Комапния "Техномарт"</h2>
+				<h2 class="detail-title">Комапния "Техномарт"</h2>
 				<p>
 					Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.
 				</p>
@@ -238,6 +262,7 @@
 				<a href="#" class="btn">Подробнее о компании</a>
 			</section>
 			<section class="contacts">
+				<h2 class="detail-title">Контакты</h2>
 				<p>
 					Вы можете забрать товар сами, заехав в наш офис:
 				</p>
@@ -249,7 +274,7 @@
 		</article>
 		<footer class="main-footer">
 			<div class="top-main-footer">
-				<div class="container">
+				<div class="container ftr-columns">
 					<div class="left-align">
 						<a class="btn-logo" href="#">Техномарт</a>
 						<p>
@@ -275,7 +300,7 @@
 				</div>
 			</div>
 			<div class="bottom-footer">
-				<div class="container">
+				<div class="container btm-ftr-flx">
 					<div class="copyright">
 						<p>
 							© 2010–2017 Компания «Техномарт»
@@ -283,9 +308,9 @@
 						</p>
 					</div>
 					<div class="social">
-						<a href="#" class="btn-social btn-social-vk"></a>
-						<a href="#" class="btn-social btn-social-fb"></a>
-						<a href="#" class="btn-social btn-social-inst"></a>
+						<a href="#" class="btn-social btn-social-vk">Вконтакте</a>
+						<a href="#" class="btn-social btn-social-fb">Фейсбук</a>
+						<a href="#" class="btn-social btn-social-inst">Инстаграм</a>
 					</div>
 					<div class="callback">
 						<p>
@@ -301,5 +326,9 @@
 			</div>
 		</footer>
 	</main>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
+<script type="text/javascript" src="skript.js"></script>
 </body>
 </html>
