--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 				</div>
 				<section class="promo-info">
 					<h2 class="visually-hidden">Информация для клиента</h2>
-					<section class="promo-info-item">
+					<section class="promo-info-item promo-action">
 						<h2>Скидки 50%</h2>
 						<a class="btn-catalog-menu" href="#">На 350 товаров</a>
 					</section>
-					<section class="promo-info-item">
+					<section class="promo-info-item promo-delivery">
 						<h2>Доставка</h2>
 						<a class="btn-catalog-menu" href="#">Бесплатно</a>
 					</section>
@@ -138,10 +138,10 @@
 							<button class="btn-boockmarks">В закладки</button>
 						</div>
 					</section>
-					<section class="product-item">
+					<section class="product-item product-new">
 						<img src="img/snippet-4.jpg" alt="фото Префоратора Bosh BFG 2000">
 						<h2>Перфоратор BOSCH BFG 2000</h2>
-						<p class="old-price"></p>
+						<p class="old-price">000</p>
 						<p class="price">12500р.</p>
 						<div class="product-item-btn">
 							<button class="btn-buy">Купить</button>
